--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@george.talusan/eufy-robovac-js",
-  "version": "0.0.8",
-  "main": "index.js",
+  "version": "0.0.9",
+  "main": "./lib/RoboVac.js",
   "scripts": {
+    "lint": "eslint lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "main": "./lib/RoboVac.js",
   "dependencies": {
     "debug": "^4.3.5",
     "tuyapi": "github:codetheweb/tuyapi"
@@ -15,6 +15,10 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0"
+  }
 }
